# Atoll

./: .gitignore  Cargo.toml  README.md  _typos.toml  deny.toml
.cargo/: config.toml
.github/workflows/: atoll-common.yml  atoll-wallet-extension.yml  docrs-atoll-wallet-extension.yml  docrs.yml
wallet-extension/: Cargo.toml  Makefile.toml
wallet-extension/extension/: manifest-chrome.json  manifest-firefox.json
wallet-extension/extension/js/: background.js  bkp-2-ghost.js  content.js
wallet-extension/src/: app.rs  browser_fetch.rs  errors.rs  lib.rs  message_handler.rs
wallet-extension/src/impl_bitcoin/: clusters.rs  features.rs  mod.rs
wallet-extension/src/impl_solana/: clusters.rs  commitment.rs  constants.rs  features.rs  injected_wallet.rs  mod.rs  reflection.rs  wallet.rs  wallet_account.rs
wallet-extension/src/impl_solana/interface/: mod.rs  sign_and_send_transaction.rs  sign_in.rs  sign_message.rs  sign_transaction.rs  standard_connect.rs
