[workspace]
members = ["wallet-extension"]
resolver = "3"

[workspace.package]
authors = ["448-OG <superuser@448.africa>"]
version = "0.1.0"
license = "AGPL-3.0-only"

[workspace.dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Text",
    "console",
    "Event",
    "MessageEvent",
    "EventListener",
] }
