[package]
name = "atoll-wallet-extension"
edition = "2024"
authors.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = { version = "0.5.1", default-features = false }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
thiserror = "2.0.16"
wallet-standard-base = { version = "0.1.7", features = ["getrandom"] }
solana-keypair = { version = "2", default-features = false, features = [
    "seed-derivable",
] }
solana-pubkey = { version = "=2", features = ["curve25519"] }
solana-seed-derivable = "=2"
solana-seed-phrase = "=2"
solana-signer = "=2"
solana-transaction = { version = "2.2.3", features = [
    "dev-context-only-utils",
] }
tiny-bip39 = { version = "2.0.0", default-features = false, features = [
    "rand",
] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "console",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlScriptElement",
    "CustomEventInit",
    "CustomEvent",
    "MessageEvent",
    "Location",
] }
zeroize = "1.8.1"
blake3 = { version = "1.8.2", default-features = false }
humantime = "2.2.0"
solana-hash = { version = "2.3.0", features = ["serde"] }
bincode = "1"
base64ct = { version = "1.8.0", features = ["alloc"] }
jzon = "0.12.5"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
solana-signature = "2.3.0"
async-lock = "3.4.1"
base64 = "0.22.1"
